--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="images/Human.png" alt="shit">
+                <img src="Human.png" alt="shit">
             </td>
             <td>
                 <h1>Pedram Davoodi</h1>
